--- a/website/templates/website/nav.html
+++ b/website/templates/website/nav.html
@@ -1,7 +1,11 @@
-﻿<nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-4">
+﻿{% load static %}
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-4">
   <div class="container-fluid">
     <a class="navbar-brand" href="/">
-      <img src="/media/logo.png" style="height: 40px; margin-top: -5px" />
+      <img
+        src="{% static 'images/logo.png' %}"
+        style="height: 40px; margin-top: -5px"
+      />
       SpaceBook
     </a>
     <button
