--- a/website/templates/website/nav.html
+++ b/website/templates/website/nav.html
@@ -5,9 +5,11 @@
       <img
         src="{% static 'images/logo.png' %}"
         style="height: 30px; margin-top: -5px"
+        alt="SpaceBook logo"
       />
       SpaceBook
     </a>
+
     <button
       class="navbar-toggler"
       type="button"
@@ -16,10 +18,47 @@
     >
       <span class="navbar-toggler-icon"></span>
     </button>
+
     <div class="collapse navbar-collapse" id="mainNav">
       <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-        <!-- AUTO-GENERATED NAV START -->
-        <!-- AUTO-GENERATED NAV END -->
+
+        {% if user.is_authenticated %}
+          <!-- Profile dropdown when logged in -->
+          <li class="nav-item dropdown">
+            <a
+              class="nav-link dropdown-toggle"
+              href="#"
+              id="profileDropdown"
+              role="button"
+              data-bs-toggle="dropdown"
+              aria-expanded="false"
+            >
+              Profile
+            </a>
+            <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="profileDropdown">
+              <li>
+                <h6 class="dropdown-header">
+                  {{ user.get_full_name|default:user.username }}
+                </h6>
+              </li>
+              <li><a class="dropdown-item" href="{% url 'profile' %}">Settings</a></li>
+              <li><hr class="dropdown-divider"></li>
+              <li>
+                <a class="dropdown-item" href="{% url 'logout' %}">
+                  Logout
+                </a>
+              </li>
+            </ul>
+          </li>
+        {% else %}
+          <!-- Google login button -->
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'social:begin' 'google-oauth2' %}">
+              Login with Google
+            </a>
+          </li>
+        {% endif %}
+
       </ul>
     </div>
   </div>
