--- a/website/templates/website/nav.html
+++ b/website/templates/website/nav.html
@@ -33,15 +33,10 @@
               data-bs-toggle="dropdown"
               aria-expanded="false"
             >
-              Profile
+              <i class="bi bi-person-circle me-1"></i> {{ user.get_full_name|default:user.username }}
             </a>
             <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="profileDropdown">
-              <li>
-                <h6 class="dropdown-header">
-                  {{ user.get_full_name|default:user.username }}
-                </h6>
-              </li>
-              <li><a class="dropdown-item" href="{% url 'profile' %}">Settings</a></li>
+              <li><a class="dropdown-item" href="{% url 'profile' %}">Profile</a></li>
               <li><hr class="dropdown-divider"></li>
               <li>
                 <a class="dropdown-item" href="{% url 'logout' %}">
