profile picture success

--- a/website/templates/website/nav.html
+++ b/website/templates/website/nav.html
@@ -25,23 +25,33 @@
         {% if user.is_authenticated %}
           <!-- Profile dropdown when logged in -->
           <li class="nav-item dropdown">
-            <a
-              class="nav-link dropdown-toggle"
+            <a class="nav-link dropdown-toggle"
               href="#"
               id="profileDropdown"
               role="button"
               data-bs-toggle="dropdown"
-              aria-expanded="false"
-            >
-              <i class="bi bi-person-circle me-1"></i> {{ user.get_full_name|default:user.username }}
+              aria-expanded="false">
+
+              {% if google_picture %}
+                <img src="{{ google_picture }}"
+                    class="rounded-circle me-2"
+                    style="width:32px; height:32px; object-fit:cover; border:2px solid #fff;">
+              {% else %}
+                <i class="bi bi-person-circle me-1"></i>
+              {% endif %}
+
+              <span class="d-none d-lg-inline">{{ user.get_full_name }}</span>
+              <span class="d-lg-none">{{ user.first_name }}</span>
             </a>
+
             <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="profileDropdown">
               <li><a class="dropdown-item" href="{% url 'profile' %}">Profile</a></li>
               <li><hr class="dropdown-divider"></li>
               <li>
-                <a class="dropdown-item" href="{% url 'logout' %}">
-                  Logout
-                </a>
+                <form action="{% url 'logout' %}" method="post" class="px-3 py-1">
+                  {% csrf_token %}
+                  <button type="submit" class="dropdown-item">Logout</button>
+                </form>
               </li>
             </ul>
           </li>
