--- a/website/templates/website/nav.html
+++ b/website/templates/website/nav.html
@@ -48,7 +48,8 @@
               <li><a class="dropdown-item" href="{% url 'profile' %}">Profile</a></li>
               <li><hr class="dropdown-divider"></li>
               <li>
-                <form action="{% url 'logout' %}" method="post" class="px-3 py-1">
+                <form action="{% url 'logout' %}?next={{ request.get_full_path|urlencode }}" 
+                      method="post" class="px-3 py-1">
                   {% csrf_token %}
                   <button type="submit" class="dropdown-item">Logout</button>
                 </form>
@@ -58,7 +59,8 @@
         {% else %}
           <!-- Google login button -->
           <li class="nav-item">
-            <a class="nav-link" href="{% url 'social:begin' 'google-oauth2' %}">
+            <a class="nav-link"
+              href="{% url 'social:begin' 'google-oauth2' %}?next={{ request.get_full_path|urlencode }}">
               Login with Google
             </a>
           </li>
