--- a/website/templates/website/home.html
+++ b/website/templates/website/home.html
@@ -14,6 +14,16 @@
 <div class="container py-5">
   <h2 class="text-center mb-4">Choose Your UiTM Branch</h2>
 
+{% if user.is_authenticated %}
+  <div class="container mt-4">
+    <a href="{% url 'branch_add' %}" class="btn btn-sm btn-outline-primary">
+      + Add New Branch
+    </a>
+  </div>
+{% endif %}
+
+
+
   <div class="row g-4">
     {% for b in branches %}
       <div class="col-md-4 col-lg-3">
