fixing other statics

--- a/website/templates/website/nav.html
+++ b/website/templates/website/nav.html
@@ -3,7 +3,7 @@
   <div class="container-fluid">
 
     <!-- BRAND / LOGO -->
-    <a class="navbar-brand" href="/">
+    <a class="navbar-brand" href="{% static '/' %}">
       <img
         src="{% static 'images/logo.png' %}"
         style="height: 30px; margin-top: -5px"
@@ -28,7 +28,7 @@
       <!-- LEFT SIDE MENU -->
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <!-- AUTO-GENERATED NAV START -->
-        <li class="nav-item"><a class="nav-link" href="/about/">About</a></li>
+        <li class="nav-item"><a class="nav-link" href="{% static 'images/logo.png' %}">About</a></li>
         <!-- AUTO-GENERATED NAV END -->
       </ul>
 
