--- a/website/templates/website/nav.html
+++ b/website/templates/website/nav.html
@@ -29,6 +29,7 @@
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <!-- AUTO-GENERATED NAV START -->
         <li class="nav-item"><a class="nav-link" href="/spacebook/about">About</a></li>
+        <li class="nav-item"><a class="nav-link" href="/spacebook/blank">Tester</a></li>
         <!-- AUTO-GENERATED NAV END -->
       </ul>
 
