--- a/website/templates/website/home.html
+++ b/website/templates/website/home.html
@@ -15,57 +15,7 @@
   <h2 class="text-center mb-4">Choose Your UiTM Branch</h2>
 
 
-<div class="row g-4">
-
-  {% if user.is_authenticated %}
-  <div class="col-md-4 col-lg-3">
-    <div class="card shadow-sm border-0 h-100">
-      
-      <div class="card-body text-center">
-        <h5 class="card-title fw-semibold">Add New Branch</h5>
-        <div class="mt-3">
-              <a href="{% url 'branch_add' %}" class="btn btn-sm btn-outline-primary"><i class="bi bi-6-circle-fill"></i> Add New Branch</a>
-        </div>
-      </div>
-    </div>
-  </div>
-  {% endif %}
-
-
-  {% for b in branches %}
-    <div class="col-md-4 col-lg-3">
-      <div class="card shadow-sm border-0 h-100">
-        <a href="#" style="text-decoration: none; color: inherit;" class="branch-select-card">
-          <img src="{{ MEDIA_URL }}branches/{{ b.code|lower }}.jpg"
-            class="card-img-top"
-            style="height: 160px; object-fit: cover;"
-            alt="{{ b.name }}"
-            onerror="this.src='{% static 'images/branch-placeholder.jpg' %}'">
-
-
-          <div class="card-body text-center">
-            <h5 class="card-title fw-semibold">{{ b.name }}</h5>
-            {% if b.state %}
-              <p class="text-muted mb-2">{{ b.state }}</p>
-            {% endif %}
-            {% if b.code %}
-              <span class="badge bg-secondary">{{ b.code }}</span>
-            {% endif %}
-            <div class="mt-3">
-              
-              {% if user.is_authenticated %}
-              <a href="{% url 'branch_edit' b.code %}" class="btn btn-sm btn-warning">Edit</a>
-              <a href="{% url 'branch_delete' b.code %}" class="btn btn-sm btn-danger">Delete</a>
-              {% endif %}
-            </div>
-          </div>
-        </a>
-      </div>
-    </div>
-  {% empty %}
-    <p class="text-center text-muted">No branches found in database.</p>
-  {% endfor %}
-</div>
+{% include "website/branch/_branch_grid.html" %}
 
 
 {% endblock %}
