--- a/website/templates/website/nav.html
+++ b/website/templates/website/nav.html
@@ -28,6 +28,12 @@
       <!-- LEFT SIDE MENU -->
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item"><a class="nav-link" href="/spacebook/">Home</a></li>
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'branch_list' %}">
+            Branches
+          </a>
+        </li>
+
         <!-- AUTO-GENERATED NAV START -->
         <li class="nav-item"><a class="nav-link" href="/spacebook/about">About</a></li>
         <li class="nav-item"><a class="nav-link" href="/spacebook/blank">Tester</a></li>
