--- a/website/templates/website/branch/branch_create.html
+++ b/website/templates/website/branch/branch_create.html
@@ -35,9 +35,9 @@
         <span class="input-group-text">
           <i class="bi bi-geo-alt"></i>
         </span>
-        {{ form.state }}
+        {{ form.location }}
       </div>
-      {{ form.state.errors }}
+      {{ form.location.errors }}
     </div>
 
 
