--- a/website/templates/website/nav.html
+++ b/website/templates/website/nav.html
@@ -28,11 +28,39 @@
       <!-- LEFT SIDE MENU -->
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item"><a class="nav-link" href="/spacebook/">Home</a></li>
-        <li class="nav-item">
-          <a class="nav-link" href="{% url 'branch_list' %}">
+        
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle"
+            href="#"
+            id="branchesDropdown"
+            role="button"
+            data-bs-toggle="dropdown"
+            aria-expanded="false">
             Branches
           </a>
+
+          <ul class="dropdown-menu" aria-labelledby="branchesDropdown">
+            <li>
+              <a class="dropdown-item" href="{% url 'branch_list' %}">
+                All Branches
+              </a>
+            </li>
+            <li><hr class="dropdown-divider"></li>
+
+            {% for b in nav_branches %}
+              <li>
+                <a class="dropdown-item" href="{% url 'branch_detail' b.code %}">
+                  {{ b.name }}
+                </a>
+              </li>
+            {% empty %}
+              <li>
+                <span class="dropdown-item-text text-muted">No branches found</span>
+              </li>
+            {% endfor %}
+          </ul>
         </li>
+
 
         <!-- AUTO-GENERATED NAV START -->
         <li class="nav-item"><a class="nav-link" href="/spacebook/about">About</a></li>
