--- a/website/templates/website/branch/branch_detail.html
+++ b/website/templates/website/branch/branch_detail.html
@@ -100,9 +100,14 @@
   </div>
   {% endif %}
 
-      {% for c in campuses %}
-        <div class="col-md-6 col-lg-4">
-          <div class="card shadow-sm border-0 h-100">
+    {% for c in campuses %}
+      <div class="col-md-6 col-lg-4">
+        <a
+          href="{% url 'library_list' %}?branch={{ branch.code }}&campus={{ c.campus_code }}"
+          class="text-decoration-none text-dark"
+        >
+          <div class="card shadow-sm border-0 h-100 cardh">
+
             <div class="card-body d-flex flex-column">
 
               <h5 class="card-title">{{ c.campus_name }}</h5>
@@ -117,7 +122,7 @@
               </span>
 
               {% if user.is_authenticated %}
-                <div class="mt-auto d-flex gap-2">
+                <div class="mt-auto d-flex gap-2" onclick="event.stopPropagation();">
                   <a href="{% url 'campus_edit' c.campus_code %}"
                     class="btn btn-sm btn-warning"
                     title="Edit campus">
@@ -135,6 +140,7 @@
             </div>
 
           </div>
+        </a>
         </div>
       {% endfor %}
     </div>
